demo/broker/broker.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-knative
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: event-display
  namespace: demo-knative
spec:
  template:
    spec:
      containers:
        - image: gcr.io/knative-releases/knative.dev/eventing-contrib/cmd/event_display
